boogie-kube-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boogie-rest
  namespace: tdp
  labels:
    app: boogie-rest
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"boogie-rest:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"boogie-rest\")].image"}]'
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: boogie-rest
  template:
    metadata:
      labels:
        app: boogie-rest
    spec:
      containers:
        - name: boogie-rest
          image: image-registry.openshift-image-registry.svc:5000/tdp/boogie-rest
          imagePullPolicy: Always
          ports:
            - name: rest-port
              protocol: TCP
              containerPort: 8087
          resources:
            requests:
              cpu: 200m
              memory: 1Gi
            limits:
              cpu: 400m
              memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: boogie-rest
  namespace: tdp
spec:
  selector:
    app: boogie-rest
  ports:
    - name: rest-port
      protocol: TCP
      port: 8087
      targetPort: 8087
  clusterIP: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: boogie-rest
  namespace: tdp
spec:
  # The routes spec determines where on the EPIC cluster (and under what name) the app will be deployed - this hostname should be resolvable in the browser
  host: boogie-rest.apps.epic-osc.mitre.org
  to:
    kind: Service
    name: boogie-rest
    weight: 100
  port:
    targetPort: 8087
  tls:
    termination: edge
  wildcardPolicy: None
