boogie-rest-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boogie-rest
  namespace: tfm-analytics
  labels:
    app: boogie-rest
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"boogie-rest:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"boogie-rest\")].image"}]'
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: boogie-rest
  template:
    metadata:
      labels:
        app: boogie-rest
    spec:
      imagePullSecrets:
        - name: artifactory-image-pull-codev
      containers:
        - name: boogie-rest
          # Use the image built from the release version of the boogie software in the prod deployment
          image: repo.codev.mitre.org/idaass-docker/tdp/boogie-rest:1.0.2-58bc2e9
          imagePullPolicy: Always
          ports:
            - containerPort: 8087
          resources:
            requests:
              cpu: 200m
              memory: 5Gi
            limits:
              cpu: 400m
              memory: 10Gi
          volumeMounts:
            - name: boogie-arinc-db
              mountPath: /data/db/arinc
      # Claim to a volume which we assume will have a loaded cycle of procedure data in it
      volumes:
        - name: boogie-arinc-db
          persistentVolumeClaim:
            claimName: boogie-arinc-db
---
apiVersion: v1
kind: Service
metadata:
  name: boogie-rest
  namespace: tfm-analytics
spec:
  selector:
    app: boogie-rest
  ports:
    - name: rest-port
      protocol: TCP
      port: 8087
      targetPort: 8087
  clusterIP: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: boogie-rest
  namespace: tfm-analytics
spec:
  # The routes spec determines where on the EPIC cluster (and under what name) the app will be deployed - this hostname should be resolvable in the browser
  host: boogie-rest.apps.epic-osc.mitre.org
  to:
    kind: Service
    name: boogie-rest
    weight: 100
  port:
    targetPort: 8087
  tls:
    termination: edge
  wildcardPolicy: None
